crates/swc/tests/tsc-references/comparisonOperatorWithNumberOperand.1.normal.js
//// [comparisonOperatorWithNumberOperand.ts]
// repro #52036
t1 >= 0 // error
;
